# pmotools-app

./: .gitignore  .pre-commit-config.yaml  PMO_Builder.py  README.md  conftest.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: quick-test.yml  test.yml
conf/: schema.json
example_data/: alternative_metadata_names.xlsx  example_contributors.tsv  example_contributors.txt  example_contrubutors.xlsx  example_raw_reads.txt  mad4hatter_allele_data_example_multi_bioinfo.csv  mad4hatter_demultiplexed_example.csv  mad4hatter_metadata_example.xlsx  mad4hatter_metadata_example_multi_panel.xlsx  reads_per_stage.txt  ~$example_contrubutors.xlsx
pages/: 1_Panel_Information.py  1_Project_Information.py  2_Specimen_Level_Metadata.py  3_Experiment_Level_Metadata.py  3_Library_Sample_Level_Metadata.py  4_Microhaplotype_Information.py  4_Panel_Information.py  5_Demultiplexed_Samples.py  5_Sequencing_Information.py  6_Bioinformatics_Information.py  6_Microhaplotype_Information.py  7_Bioinformatic_Information.py  7_Bioinformatics_Information.py  7_Microhaplotype_Information.py  8_Create_Final_PMO.py  8_Read_Counts_per_Stage.py  9_Create_Final_PMO.py  tmp.py
src/: data_loader.py  field_matcher.py  format_page.py  transformer.py  utils.py
tests/: __init__.py  test_data_loader.py  test_field_matcher.py  test_transformer.py  test_utils.py
