[project]
name = "pmotools-app"
version = "0.1.0"
description = "An app to convert data into the PMO format."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fuzzywuzzy==0.18.0",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "pmotools==0.1.0",
    "streamlit==1.40.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "streamlit>=1.40.1",
]
